--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,16 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js"></script>
+    <script src="./bower_components/ng-file-upload/ng-file-upload.min.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/clientsCtrl.js"></script>
     <script src="./js/csvCtrl.js"></script>
     <script src="./js/defaultMessageCtrl.js"></script>
     <script src="./js/massTextCtrl.js"></script>
-    <script src="./js/newAdminCtrl.js"></script>
     <script src="./js/newClientCtrl.js"></script>
     <script src="./js/mainService.js"></script>
     <script src="./js/navBarDirective.js"></script>
+    <script src="./js/loginCtrl.js"></script>
   </body>
 </html>
