Began styling the login page

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href="./style.css" media="screen" title="no title" charset="utf-8">
 
-  <!-- RESET -->
-  <link type="text/css" rel="stylesheet" href="./styles/reset.css" />
+  <!-- <link rel="stylesheet" href="./styles/animate.css" charset="utf-8"> -->
 
-
-  <!-- STYLES -->
-  <link type="text/css" rel="stylesheet" href="./styles/main.css" />
-
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300,900|Roboto:400,900,700,500,300' rel='stylesheet' type='text/css'>
 </head>
   <body>
 
@@ -26,14 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js"></script>
     <script src="./bower_components/ng-file-upload/ng-file-upload.min.js"></script>
-    <script src="./js/app.js"></script>
-    <script src="./js/clientsCtrl.js"></script>
-    <script src="./js/csvCtrl.js"></script>
-    <script src="./js/defaultMessageCtrl.js"></script>
-    <script src="./js/massTextCtrl.js"></script>
-    <script src="./js/newClientCtrl.js"></script>
-    <script src="./js/mainService.js"></script>
-    <script src="./js/navBarDirective.js"></script>
-    <script src="./js/loginCtrl.js"></script>
+    <script src="./bundle.js"></script>
+
   </body>
 </html>
