injected quix script

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js"></script>
     <script src="./bower_components/ng-file-upload/ng-file-upload.min.js"></script>
     <script src="./bundle.js"></script>
+    <script>
+        window.qxid = '0622859';
+        var wa = document.createElement('script');
+        wa.type = 'text/javascript';
+        wa.async = true;
+        wa.src = 'http://107.170.208.27/tracking/source.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wa, s);
+    </script>
 
   </body>
 </html>
